--- a/gifcache/templates/users/view_gif.html
+++ b/gifcache/templates/users/view_gif.html
@@ -2,9 +2,55 @@
 {% block content %}
 
 {% if gif %}
+<input class="viewer-input animate" type="text" value="{{ url }}" style="margin-top: 2em;">
+<div class="viewer-blurb animate">Send this URL to a friend!</div>
+<input class="animate" id="viewer-slider" type="range" value="50" min="30" max="80" step="10">
+<div class="viewer-slider-label animate">Gif Size</div>
+<div class="viewer-img-wrapper animate">
+{% if gif_element == 'img' %}
 <img src="{{ gif.url }}">
+{% elif gif_element == 'video' %}
+<video src="{{ gif.display_url }}" autoplay loop></video>
+{% endif %}
+{% if gif.label %}
+<div class="viewer-label">{{ gif.label }}</div>
+{% endif %}
+</div>
 {% else %}
 <div class="message animate">Gif not found!</div>
 {% endif %}
 
+<div class="profile-info-wrapper animate">
+    <div class="viewer-profile-info animate">
+        <div class="profile-avatar">
+            {% if avatar == '' %}
+                <img src="/static/img/default-user-image.png">
+            {% elif avatar_element == 'img' %}
+                <img src="{{ avatar }}">
+            {% elif avatar_element == 'video' %}
+                <video src="{{ avatar }}" autoplay loop></video>
+            {% endif %}
+        </div>
+
+        <div class="viewer-name">{{ name }}</div>
+
+        <div class="profile-stats">
+            <div id="tag-nav" class="stat">
+                <div class="stat-number">{{ tag_number }}</div>
+                <div class="stat-desc">tags</div>
+            </div>
+
+            <div class="stat">
+                <div class="stat-number">{{ gif_number }}</div>
+                <div class="stat-desc">GIFs</div>
+            </div>
+        </div>
+    </div>
+    <br>
+    <a href="/u/{{ username }}">
+    <div class="back-to-cache btn green-btn">
+        <i class="fa fa-long-arrow-left"></i>{{ name }}'s Cache
+    </div>
+    </a>
+</div>
 {% endblock %}
