--- a/gifcache/templates/users/view_tag.html
+++ b/gifcache/templates/users/view_tag.html
@@ -8,7 +8,7 @@
     <input class="viewer-input animate" type="text" value="{{ url }}">
     <div class="viewer-blurb animate">Send this URL to a friend!</div>
     <div class="tag-group tag-group-animate animate-opacity animate-bg">
-        <div class="gif-count animate-fast">{{ gif_number }}</div>
+        <div class="gif-count animate-fast">{{ num_gifs }}</div>
         <i class="fa fa-cog tag-settings-icon animate-fast"></i>
         <div class="tag-settings-tooltip tooltip animate-fast">Tag Settings<i class="fa fa-caret-down"></i></div>
         <div class="tag-manager hidden">
