--- a/gifcache/static/css/main.css
+++ b/gifcache/static/css/main.css
@@ -970,6 +970,7 @@ select:hover {cursor: pointer;}
 	padding: 0 .75em;
 	max-width: 40em;
 	font-size: 1.5em;
+	font-weight: 600;
 }
 .home-about {
 	margin: 0 auto;
@@ -2275,8 +2276,10 @@ div.grid-view-wrapper::-webkit-scrollbar-thumb {-webkit-box-shadow: inset 0 0 6p
 }
 .viewer-blurb {
 	opacity: 0.0;
-	margin: .65em;
+	margin: .8em;
 	text-align: center;
+	font-weight: 600;
+	font-size: .8em;
 }
 .viewer-img-wrapper {
 	opacity: 0.0;
