--- a/gifcache/static/css/main.css
+++ b/gifcache/static/css/main.css
@@ -1123,10 +1123,13 @@ select:hover {cursor: pointer;}
 }
 .desktop-hover:hover > .inner-tag-nav {display: block !important;}
 .inner-tag-nav, .sort-options {
+	overflow-y: auto;
+	overflow-x: hidden;
 	position: absolute;
 	z-index: 7;
 	padding: .75em;
 	width: 10em;
+	max-height: 30em;
 	background-color: #F2F2F2;
 	text-align: center;
 	box-shadow: 0 1px 5px rgba(0, 0, 0, 0.46);
